@@ -1,3 +1,13 @@
+2004-01-16  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3531983, fixed positioning not working for widgets.  Make sure to move widgets at paint time
+	if necessary.
+	
+        Reviewed by darin
+	
+        * khtml/rendering/render_replaced.cpp:
+        (RenderWidget::paintObject):
+
 2004-01-15  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3530734, many java applets don't show up.  Go ahead and just use the width/height from the style
